@@ -385,6 +385,8 @@ Portability
 
 * Weak hash tables now also work on platforms without mmap().
 
+* Dynamic modules now work on woe32 too.
+
 
 
 2.33.2 (2004-06-02)
