@@ -1,5 +1,16 @@
 2005-03-03  Sam Steingold  <sds@gnu.org>
 
+	ported DYNAMIC_MODULES to WIN32_NATIVE
+	* spvw.d (libopen, find_name): moved here from foreign.d
+	(get_module_symbol): new function
+	(dynload_modules): use them (instead of dlopen and dlsym)
+	* lispbibl.d (libopen, find_name): declare
+	* foreign.d (libopen, find_name): moved to spvw.d
+	(object_handle): surround find_name() with
+	begin_system_call()/end_system_call()
+
+2005-03-03  Sam Steingold  <sds@gnu.org>
+
 	* stream.d (oconv_unshift_output_unbuffered_)
 	(oconv_unshift_output_buffered_): use OS_errno instead of errno
 
